force-app/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <label>Margin</label>
    <nameField>
        <displayFormat>Dis-{0000}</displayFormat>
        <label>Margin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>