force-app/main/default/objects/Discount__c/fields/Discount_Per__c.field-meta.xml
<CustomField>
    <fullName>Discount_Per__c</fullName>
    <formula>Text( Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Per</label>
    <type>Text</type>
</CustomField>