force-app/main/default/objects/Discount__c/fields/Eva_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Eva_Discount_Percent__c</fullName>
    <label>Eva Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>