force-app/main/default/objects/Discount__c/fields/GST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage__c</fullName>
    <label>GST Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_percentages</valueSetName>
    </valueSet>
</CustomField>