force-app/main/default/objects/Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>GST_Percentage__c</columns>
    <columns>Discount_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>